--- a/app/templates/edit_profile.html
+++ b/app/templates/edit_profile.html
@@ -5,7 +5,38 @@
     <h1>{{_('Edit Profile')}}</h1>
     <div class="row">
         <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+            {{ wtf.form_field(form.username) }}
+        </div>
+        <div class="col-md-4">
+            {{ wtf.form_field(form.name) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.form_field(form.email) }}
+        </div>
+        <div class="col-md-4">
+            {{ wtf.form_field(form.phone) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+          {{ wtf.form_field(form.departments) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+          {{ wtf.form_field(form.about_me) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+          {{ wtf.form_field(form.experience) }}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-8">
+          {{ wtf.form_field(form.why) }}
         </div>
     </div>
 {% endblock %}
