--- a/app/templates/email/reset_password.html
+++ b/app/templates/email/reset_password.html
@@ -10,4 +10,4 @@
 <p>If you have not requested a password reset simply ignore this message.</p>
 <p>Sincerely,</p>
 <p>InfernapeXavier</p>
-<p>To-Dah!</p>
+<p>Webby!</p>
