--- a/app/templates/manage.html
+++ b/app/templates/manage.html
@@ -44,7 +44,7 @@
           {{ wtf.form_field(form.submit) }}
         </div>
     </div> -->
-    <div class="row">
+    <div class="row" style="padding-left:100px; padding-top: 40px; margin:0px">
         <div class="col-md-8">
           {{ wtf.quick_form(form) }}
         </div>
