--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,80 +1,89 @@
-{% extends "base.html" %}
+{% extends "base.html" %} {% block app_content %}
+<div style="margin-left:90px; margin-right:90px; margin-top:50px">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-8">
 
-{% block app_content %}
-    <table class="table table-hover">
-        <tr>
-            <td width="256px"><img src="{{ user.avatar(256) }}"></td>
-            <td>
-                <h1>{{ user.username }}</h1>
-                {% if user.about_me %}<p>{{ user.about_me }}</p>{% endif %}
-                {% if user.departments %}<p>{{_('Departments Available: ')}}{{ user.departments }}</p>{% endif %}
-                {% if user.last_seen %}<p>{{_('Last seen on')}}: {{ moment(user.last_seen).format('LLL') }}</p>{% endif %}
-                <p>{{ _('%(count)d following', count=user.followed.count()) }}</p>
-                {% if user.type == 'committee' %}
-                {% if user == current_user %}
-                <a href="{{ url_for('applications') }}">
-                  <p>{{ _('%(count)d applicants', count=user.applicants.count()) }}</p>
-                </a>
-                {% endif %}
-                {% else %}
-                <p>{{ _('%(count)d applied for', count=user.applied.count()) }}</p>
-                {% endif %}
-                {% if user == current_user %}
-                <p><a href="{{ url_for('edit_profile') }}">{{_('Profile')}}</a></p>
-                {% elif not current_user.is_following(user) %}
-                <p><a href="{{ url_for('follow', username=user.username) }}">{{_('Follow')}}</a></p>
-                {% else %}
-                <p><a href="{{ url_for('unfollow', username=user.username) }}">{{_('Unfollow')}}</a></p>
-                {% endif %}
-                {% if user == current_user and current_user.type == 'committee' %}
-                <p><a href="{{ url_for('clearall') }}">{{_('Clear All Posts!')}}</a></p>
-                {% endif %}
-                {% if user != current_user and current_user.type == 'committee' %}
-                <nav aria-label="...">
-                    <ul class="pager">
-                      <li class="next">
-                        <a href="{{ url_for('deleteApplication', username = user.username) }}">
-                          {{_('Reject')}}  <span aria-hidden="true">&#x2718;</span>
-                        </a>
-                      </li>
-                    </ul>
-                </nav>
-                {% endif %}
-            </td>
-        </tr>
-    </table>
-    {% if user.type == 'student' %}
-    <table>
-      <th>
-        <tr>
-          <td><b>{{_('SOP')}}</b></td>
-        </tr>
-      </th>
-      <tr>
-        <td>{{ user.name }}</td>
-      </tr>
-      <tr>
-        <td>{{ user.email }}</td>
-      </tr>
-      <tr>
-        <td>{{ user.phone }}</td>
-      </tr>
-      <tr>
-        <td>{{ user.departments }}</td>
-      </tr>
-      <tr>
-        <td>{{ user.about_me }}</td>
-      </tr>
-      <tr>
-        <td>{{ user.experience }}</td>
-      </tr>
-      <tr>
-        <td>{{ user.why }}</td>
-      </tr>
-    </table>
-    {% else %}
-    {% for post in posts %}
-        {% include '_post.html' %}
-    {% endfor %}
-    {% endif %}
-{% endblock %}
+                <table class="table table-hover container-fluid">
+                    <tr>
+                        <td width="150px"><img src="{{ user.avatar(150) }}"></td>
+                        <td>
+                            <h2 style="margin-bottom:10px; margin-top:10px"><b>{{ user.username }}</b></h2>
+                            {% if user.last_seen %}
+                            <p style="margin-bottom:10px;"><b>{{_('Last seen on')}}:{{ moment(user.last_seen).format('LLL') }}</b> </p>{% endif %}
+                            <p style="margin-bottom:6px;">{{ _('%(count)d following', count=user.followed.count()) }}</p>
+                            {% if user.type == 'committee' %} {% if user == current_user %}
+                            <a href="{{ url_for('applications') }}">
+                                <p>{{ _('%(count)d applicants', count=user.applicants.count()) }}</p>
+                            </a>
+                            {% endif %} {% else %}
+                            <p style="margin-bottom:6px;">{{ _('%(count)d applied for', count=user.applied.count()) }}</p>
+                            {% endif %} {% if user == current_user %}
+                            <p><a href="{{ url_for('edit_profile') }}">{{_('Edit Profile')}}</a></p>
+                            {% elif not current_user.is_following(user) %}
+                            <p><a href="{{ url_for('follow', username=user.username) }}">{{_('Follow')}}</a></p>
+                            {% else %}
+                            <p><a href="{{ url_for('unfollow', username=user.username) }}">{{_('Unfollow')}}</a></p>
+                            {% endif %} {% if user == current_user and current_user.type == 'committee' %}
+                            <p><a href="{{ url_for('clearall') }}">{{_('Clear All Posts!')}}</a></p>
+                            {% endif %} {% if user != current_user and current_user.type == 'committee' %}
+                            <nav aria-label="...">
+                                <ul class="pager">
+                                    <li class="next">
+                                        <a href="{{ url_for('deleteApplication', username = user.username) }}">
+                              {{_('Reject')}}  <span aria-hidden="true">&#x2718;</span>
+                            </a>
+                                    </li>
+                                </ul>
+                            </nav>
+                            {% endif %}
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="2">
+                            {% if user.about_me %}
+                            <p><b>{{ user.about_me }}</b></p>{% endif %} {% if user.type == 'student' %} {% if user.departments %}
+                            <p><b><h3>{{_('Why me? ')}}</h3>{{ user.why}}</b></p>{% endif %} {% endif %}
+                        </td>
+                    </tr>
+                </table>
+
+            </div>
+
+            {% if user.type == 'student' %}
+
+            <div class="col-sm-4">
+                <div style="margin-left: 50px">
+                    <table>
+                        <tr>
+                            <td><b><span class="glyphicon glyphicon-envelope"></span>{{_(' E-MAIL ')}}<br></b> {{ user.email }}<br><br></td>
+                        </tr>
+                        <tr>
+                            <td><b><span class="glyphicon glyphicon-phone"></span>{{_(' PHONE NUMBER ')}}</b><br> {{ user.phone }}<br><br></td>
+                        </tr>
+                        <tr>
+                            <td><b><span class="glyphicon glyphicon-heart"></span>{{_(' DEPARTMENTS INTERESTED IN ')}}</b><br> {{ user.departments }}<br><br></td>
+                        </tr>
+                        <tr>
+                            <td><b> <span class="glyphicon glyphicon-time"></span>{{_(' PAST EXPERIENCE ')}}</b><br> {{ user.experience }}<br><br></td><br>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
+
+{% else %}
+<div class="row">
+
+    <div class="col-sm-12">
+        <h2 style="padding-left: 20px; margin-bottom: 0px ">{{ _('Announcements so far:') }}</h2>
+        {% for post in posts %} {% include '_post.html' %} {% endfor %}
+    </div>
+</div>
+
+{% endif %} {% endblock %}
