--- a/app/templates/_applications.html
+++ b/app/templates/_applications.html
@@ -1,27 +1,61 @@
-<a href="{{ url_for('user', username=u.username) }}">
-  <table class="table table-hover">
-    <tr>
-      <td width="70px">
-          <img src="{{ u.avatar(70) }}" />
-        </a>
-      </td>
-      <td>
-        <a href="{{ url_for('user', username=u.username) }}">
-          {{ u.username }}
-        </a>
-        <br>
-          {{ u.why }}
-        <br>
-        <nav aria-label="...">
-            <ul class="pager">
-              <li class="next">
-                <a href="{{ url_for('deleteApplication', username = u.username) }}">
-                  {{_('Reject')}}  <span aria-hidden="true">&#x2718;</span>
-                </a>
-              </li>
-            </ul>
-        </nav>
-      </td>
-    </tr>
-  </table>
-</a>
+<style>
+    .card {
+        box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+        transition: 0.3s;
+        width: 80%;
+        border-radius: 5px;
+    }
+    
+    .card:hover {
+        box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    }
+    
+    img {
+        border-radius: 5px;
+    }
+    
+    .container {
+        padding: 2px 16px;
+    }
+</style>
+
+
+
+
+<center>
+    <div class="card" style="margin:30px ;background-color:#D9EDF7">
+        <div class="conrainer-fluid">
+            <a href="{{ url_for('user', username=u.username) }}" style="text-decoration:none; color:black">
+
+                <div class="row">
+                    <div class="col-sm-2">
+                        <img src="{{ u.avatar(70) }}" style=" width:100%; padding-left:10px; margin-bottom:10px; margin-top:10px">
+
+                    </div>
+
+
+                    <div class="col-sm-10" style="padding-top: 0px; padding-right: 30px; padding-left: 0px">
+                        <div style="text-align: left;">
+                            <h3 href="{{ url_for('user', username=u.username) }}" style="margin-top:10px">
+                                {{ u.username }}
+                            </h3>
+                            {{ u.why }}
+                        </div>
+                        <br>
+            </a>
+
+            <nav aria-label="...">
+                <ul class="pager" style="margin-bottom: 10px">
+                    <li class="next">
+                        <a href="{{ url_for('deleteApplication', username = u.username) }}" style="text-decoration: none;">
+                              {{_('Reject')}}  <span aria-hidden="true">&#x2718;</span>
+                            </a>
+                    </li>
+                </ul>
+            </nav>
+            </div>
+            <div>
+
+            </div>
+            </div>
+</center>
