--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,59 +1,51 @@
 {% extends 'bootstrap/base.html' %}
+<head>
+  <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+    {% block title %}
+      {% if title %}
+       {{ title }} - Webby!{% else %}{{_('Welcome to Webby!')}}
+      {% endif %}
+    {% endblock %}
 
-{% block title %}
-    {% if title %}
-      {{ title }} - Webby!{% else %}{{_('Welcome to Webby!')}}
-    {% endif %}
-{% endblock %}
+    <style>
+    html *{
+      font-family: Raleway !important;
+    }
+    </style>
+</head>
 
 {% block navbar %}
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+<nav class="navbar navbar-default" style="margin: 0px; width: 100%;border: 0px; border-radius: 0px; background-color:#263238 ;">
+    <div class="container">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="{{ url_for('index') }}">Webby!</a>
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for('index') }}">{{_('Home')}}</a></li>
-                    <li><a href="{{ url_for('explore') }}">{{_('Explore')}}</a></li>
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if current_user.is_anonymous %}
-                    <li><a href="{{ url_for('login') }}">{{_('Login')}}</a></li>
-                    {% else %}
-                    <li width="30px"><img src="{{ current_user.avatar(30) }}" style="padding-top: 10px; padding-left: 15px"></li>
-                    <li><a href="{{ url_for('user', username=current_user.username) }}">Profile</a></li>
-                    <li><a href="{{ url_for('logout') }}">{{_('Logout')}}</a></li>
-                    {% endif %}
-                </ul>
-            </div>
+            <a class="navbar-brand" style="color: white" href="{{ url_for('index') }}">Webby!</a>
         </div>
-    </nav>
-{% endblock %}
-
-{% block content %}
-    <div class="container">
-        {% with messages = get_flashed_messages() %}
-        {% if messages %}
-            {% for message in messages %}
-            <div class="alert alert-info" role="alert">{{ message }}</div>
-            {% endfor %}
-        {% endif %}
-        {% endwith %}
-
-        {# application content needs to be provided in the app_content block #}
-        {% block app_content %}{% endblock %}
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+            <ul class="nav navbar-nav">
+                <li><a href="{{ url_for('index') }}" style="color: white">{{_('Home')}}</a></li>
+                <li><a href="{{ url_for('explore') }}" style="color: white">{{_('Explore')}}</a></li>
+            </ul>
+            <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_anonymous %}
+                <li><a href="{{ url_for('login') }}" style="color: white">{{_('Login')}}</a></li>
+                {% else %}
+                <li width="30px"><img src="{{ current_user.avatar(30) }}" style="padding-top: 10px; padding-left: 15px"></li>
+                <li><a href="{{ url_for('user', username=current_user.username) }}" style="color: white">Profile</a></li>
+                <li><a href="{{ url_for('logout') }}" style="color: white">{{_('Logout')}}</a></li>
+                {% endif %}
+            </ul>
+        </div>
     </div>
+</nav>
 {% endblock %}
-
-{% block scripts %}
-  {{ super() }}
-  {{ moment.include_moment() }}
-  {{ moment.lang(g.locale) }}
-{% endblock %}
+{% block content %}
+<div class="container" style="margin:0px; padding:0px; width:100%; height:auto; background-color:#fff">
+  {% block app_content %}{% endblock %}
+</div>
+{% endblock %} {% block scripts %} {{ super() }} {{ moment.include_moment() }} {{ moment.lang(g.locale) }} {% endblock %}
