--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,14 +1,194 @@
-{% extends 'base.html' %}
-{% import 'bootstrap/wtf.html' as wtf %}
+{% extends 'base.html' %} {% import 'bootstrap/wtf.html' as wtf %} {% block app_content %}
 
-{% block app_content %}
-    <h1>{{_('Sign In')}}</h1>
-    <div class="row">
-        <div class="col-md-4">
-            {{ wtf.quick_form(form) }}
+<style>
+    * {
+        box-sizing: border-box;
+    }
+
+    body {
+        font-family: Verdana, sans-serif;
+    }
+
+    .mySlides {
+        display: none;
+    }
+
+    img {
+        vertical-align: middle;
+    }
+    /* Slideshow container */
+
+    .slideshow-container {
+        max-width: 100%;
+        position: relative;
+        margin: auto;
+    }
+    /* Caption text */
+
+    .text {
+        color: #f2f2f2;
+        font-size: 15px;
+        padding: 8px 12px;
+        position: absolute;
+        bottom: 8px;
+        width: 100%;
+        text-align: center;
+    }
+    /* Number text (1/3 etc) */
+
+    .numbertext {
+        color: #f2f2f2;
+        font-size: 12px;
+        padding: 8px 12px;
+        position: absolute;
+        top: 0;
+    }
+    /* The dots/bullets/indicators */
+
+    .dot {
+        height: 15px;
+        width: 15px;
+        margin: 0 2px;
+        background-color: #bbb;
+        border-radius: 50%;
+        display: inline-block;
+        transition: background-color 0.6s ease;
+    }
+
+    .active {
+        background-color: #717171;
+    }
+    /* Fading animation */
+
+    .fade {
+        -webkit-animation-name: fade;
+        -webkit-animation-duration: 3s;
+        animation-name: fade;
+        animation-duration: 3s;
+    }
+
+    @-webkit-keyframes fade {
+        from {
+            opacity: .4
+        }
+        to {
+            opacity: 1
+        }
+    }
+
+    @keyframes fade {
+        from {
+            opacity: .4
+        }
+        to {
+            opacity: 1
+        }
+    }
+    /* On smaller screens, decrease text size */
+
+    @media only screen and (max-width: 300px) {
+        .text {
+            font-size: 11px
+        }
+    }
+</style>
+
+<div class="slideshow-container">
+
+    <div class="mySlides fade">
+        <img src="https://api.gccsda.com/uploads/store/8699cc2f62b703d3e767d23ead334cc7.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <img src="https://api.gccsda.com/uploads/store/0ed0d747a459fd90e7a6e1595190fad8.jpg" style="width:100%">
+    </div>
+
+    <div class="mySlides fade">
+        <img src="http://www.yesprep.org/sites/default/files/header_how_to_apply_0.jpg" style="width:100%">
+    </div>
+
+</div>
+
+<div style="text-align:center; opacity:0">
+    <span class="dot"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+</div>
+
+<script>
+    var slideIndex = 0;
+    showSlides();
+
+    function showSlides() {
+        var i;
+        var slides = document.getElementsByClassName("mySlides");
+        var dots = document.getElementsByClassName("dot");
+        for (i = 0; i < slides.length; i++) {
+            slides[i].style.display = "none";
+        }
+        slideIndex++;
+        if (slideIndex > slides.length) {
+            slideIndex = 1
+        }
+        for (i = 0; i < dots.length; i++) {
+            dots[i].className = dots[i].className.replace(" active", "");
+        }
+        slides[slideIndex - 1].style.display = "block";
+        dots[slideIndex - 1].className += " active";
+        setTimeout(showSlides, 3000); // Change image every 3 seconds
+    }
+</script>
+
+
+{% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
+<center>
+    <div class="alert alert-info" role="alert" style="width:1300px; text-align:left;">
+        <div style="padding-left:10px">{{ message }}</div>
+    </div>
+</center>
+{% endfor %} {% endif %} {% endwith %}
+
+<div class="container-fluid">
+    <div class="row" style="padding-bottom:40px">
+
+        <div class="col-sm-6" style="padding-left:25px; padding-right:25px">
+            <h1>What is Webby?</h1>
+            <p>Webby is a web-application which helps to bridge the gap between students and the committees.<br><br> We have often seen that students tend to ignore the posters put up all around the college and result of that is low turnout.<br><br> So here
+                is our solution: Whenever an event is around the corner the committees can use this as a platform to publicize their event. Also for students we have something. Whenever a committee comes up with their recruitments students can apply for
+                the same by posting their SOPs on Webby and committees can take a look in advance before setting up the interview. This will not only help the students applying for multiple committees but will also help the committees choose the best
+                suited candidates.
+            </p>
+        </div>
+
+
+        <div class="col-sm-6">
+            <h2 style="margin-left:90px; padding-left:50px">{{_('Sign In')}}</h2>
+            <div class="row" style="margin-left:90px; padding-left:50px">
+                <div class="col-md-8">
+                    {{ wtf.quick_form(form) }}
+                </div>
+            </div>
+            <br>
+            <p style="margin-left:92px; padding-left:50px"><a href="{{ url_for('register') }}">{{_('New User?')}} </a></p>
+            <p style="margin-left:92px; padding-left:50px"><a href="{{ url_for('reset_password_request') }}">{{_('Forgot Your Password?')}}</a></p>
+
         </div>
     </div>
-    <br>
-    <p><a href="{{ url_for('register') }}">{{_('New User?')}} </a></p>
-    <p><a href="{{ url_for('reset_password_request') }}">{{_('Forgot Your Password?')}}</a></p>
+</div>
+
+
+
+<div style="background-color: #424242; padding-bottom: 3px; padding-top: 3px">
+    <footer>
+        <div class="footer-copyright py-3 text-center" style="color: #ffffff">
+            © 2018 Copyright:
+            <a href="" style="color: #ffffff"> Webby </a>
+        </div>
+    </footer>
+</div>
+
+
+
+
+
 {% endblock %}
