--- a/app/templates/reset_password_request.html
+++ b/app/templates/reset_password_request.html
@@ -2,10 +2,12 @@
 {% import 'bootstrap/wtf.html' as wtf %}
 
 {% block app_content %}
+<div style="padding-top: :40px; padding-left:100px; margin:0px">
     <h1>{{_('Reset Password')}}</h1>
     <div class="row">
         <div class="col-md-4">
             {{ wtf.quick_form(form) }}
         </div>
     </div>
+</div>
 {% endblock %}
