--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -150,10 +150,10 @@
     <div class="row" style="padding-bottom:40px">
 
         <div class="col-sm-6" style="padding-left:25px; padding-right:25px">
-            <h1>What is Webby?</h1>
-            <p>Webby is a web-application which helps to bridge the gap between students and the committees.<br><br> We have often seen that students tend to ignore the posters put up all around the college and result of that is low turnout.<br><br> So here
+            <h1>What is Netco?</h1>
+            <p>Netco is a web-application which helps to bridge the gap between students and the committees.<br><br> We have often seen that students tend to ignore the posters put up all around the college and result of that is low turnout.<br><br> So here
                 is our solution: Whenever an event is around the corner the committees can use this as a platform to publicize their event. Also for students we have something. Whenever a committee comes up with their recruitments students can apply for
-                the same by posting their SOPs on Webby and committees can take a look in advance before setting up the interview. This will not only help the students applying for multiple committees but will also help the committees choose the best
+                the same by posting their SOPs on Netco and committees can take a look in advance before setting up the interview. This will not only help the students applying for multiple committees but will also help the committees choose the best
                 suited candidates.
             </p>
         </div>
@@ -180,7 +180,7 @@
     <footer>
         <div class="footer-copyright py-3 text-center" style="color: #ffffff">
             © 2018 Copyright:
-            <a href="" style="color: #ffffff"> Webby </a>
+            <a href="" style="color: #ffffff"> Netco </a>
         </div>
     </footer>
 </div>
