--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -3,7 +3,7 @@
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
     {% block title %}
       {% if title %}
-       {{ title }} - Webby!{% else %}{{_('Welcome to Webby!')}}
+       {{ title }} - Netco!{% else %}{{_('Welcome to Netco!')}}
       {% endif %}
     {% endblock %}
 
@@ -24,7 +24,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-            <a class="navbar-brand" style="color: white" href="{{ url_for('index') }}">Webby!</a>
+            <a class="navbar-brand" style="color: white" href="{{ url_for('index') }}">Netco!</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
