--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -139,6 +139,7 @@
     }
 </script>
 
+{% with messages = get_flashed_messages() %} {% if messages %} {% for message in messages %}
 <center>
     <div class="alert alert-info" role="alert" style="width:100%; text-align:left;">
         <div style="padding-left:10px">{{ message }}</div>
