--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -28,7 +28,7 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li><a href="{{ url_for('index') }}" style="color: white">{{_('Home')}}</a></li>
+                <li><a href="{{ url_for('first') }}" style="color: white">{{_('Home')}}</a></li>
                 <li><a href="{{ url_for('explore') }}" style="color: white">{{_('Explore')}}</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
