--- a/app/templates/first.html
+++ b/app/templates/first.html
@@ -93,19 +93,19 @@
     }
 </style>
 
-<!-- <div class="slideshow-container">
+<div class="slideshow-container">
     <div class="mySlides fade">
-        <img src="https://api.gccsda.com/uploads/store/8699cc2f62b703d3e767d23ead334cc7.jpg" style="width:100%">
+        <img src="images/img1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="https://api.gccsda.com/uploads/store/0ed0d747a459fd90e7a6e1595190fad8.jpg" style="width:100%">
+        <img src="images/img2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="http://www.yesprep.org/sites/default/files/header_how_to_apply_0.jpg" style="width:100%">
+        <img src="images/img3.jpg" style="width:100%">
     </div>
-</div> -->
+</div>
 
 <div style="text-align:center; opacity:0">
     <span class="dot"></span>
