--- a/app/templates/first.html
+++ b/app/templates/first.html
@@ -95,15 +95,15 @@
 
 <div class="slideshow-container">
     <div class="mySlides fade">
-        <img src="images/img1.jpg" style="width:100%">
+        <img src="https://firebasestorage.googleapis.com/v0/b/netco-94d14.appspot.com/o/img1.jpg?alt=media&token=32b61a2b-9f49-43fe-b5c5-626ef767b068" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/img2.jpg" style="width:100%">
+        <img src="https://firebasestorage.googleapis.com/v0/b/netco-94d14.appspot.com/o/img2.jpg?alt=media&token=329e66fb-e727-417e-a98b-9da7d8854f33" style="width:100%">
     </div>
 
     <div class="mySlides fade">
-        <img src="images/img3.jpg" style="width:100%">
+        <img src="https://firebasestorage.googleapis.com/v0/b/netco-94d14.appspot.com/o/img3.jpg?alt=media&token=e1f51f5c-1da9-4a9d-8a72-0c031b31bc8d" style="width:100%">
     </div>
 </div>
 
